# python-sdk

./: Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: .travis.yml
src/outagelab/: __init__.py  outagelab.py
