[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outagelab"
version = "0.1.0"
description = "OOutage simulation"
readme = "README.rst"
authors = [
  {name = "Max North", email = "maxwelldnorth@gmail.com"}
]
maintainers = [
  {name = "Max North", email = "maxwelldnorth@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/maxnorth/outagelab/issues"
changelog = "https://github.com/maxnorth/outagelab/blob/master/changelog.md"
homepage = "https://github.com/maxnorth/outagelab"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

